--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=student-management-server
+
+# ---- PostgreSQL datasource ----
+spring.datasource.url=jdbc:postgresql://localhost:5432/uni_apply
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# ---- JPA / Hibernate ----
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
