--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# ---- CORS ----
+app.cors.allowed-origins=http://localhost:4200,http://localhost:5173
