--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # ---- CORS ----
 app.cors.allowed-origins=http://localhost:4200,http://localhost:5173
+
+# ---- Auth session ----
+app.auth.session-hours=12
