--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ app.cors.allowed-origins=http://localhost:4200,http://localhost:5173
 
 # ---- Auth session ----
 app.auth.session-hours=12
+app.student-invite.ttl-hours=72
